--- a/test/fixtures/applies.yml
+++ b/test/fixtures/applies.yml
@@ -21,14 +21,7 @@
 #  updated_at             :datetime         not null
 #
 
-# Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
-
-# This model initially had no columns defined. If you add columns to the
-# model remove the '{}' from the fixture names and add the columns immediately
-# below each fixture, per the syntax in the comments below
-#
-one: {}
-# column: value
-#
-two: {}
-# column: value
+one:
+  patient: one
+  hospital: hospital
+  estimate_discharge_at: '2017-08-01'
