--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -21,14 +21,12 @@
 #  last_sign_in_ip        :string(255)
 #
 
-# Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
+admin:
+  name: 'Admin'
+  email: 'admin@sunflower.com'
+  role: 1
 
-# This model initially had no columns defined. If you add columns to the
-# model remove the '{}' from the fixture names and add the columns immediately
-# below each fixture, per the syntax in the comments below
-#
-one: {}
-# column: value
-#
-two: {}
-# column: value
+doctor:
+  name: 'Doctor Wu'
+  email: 'doctor.wu@sunflower.com'
+  role: 2
