ADD: model test

--- a/test/fixtures/patients.yml
+++ b/test/fixtures/patients.yml
@@ -5,7 +5,7 @@
 #  id                 :integer          not null, primary key
 #  name               :string(255)
 #  gender             :integer          default("male")
-#  birth_certificated :boolean
+#  birth_certificated :boolean          default(FALSE)
 #  id_type            :integer          default("id_card")
 #  id_number          :string(255)
 #  birthday           :date
